Fix iOS input zoom on mobile / fix inputs rounded corners on ios / fix logout container positioning on 'sm' breakpoint

--- a/client/src/scss/_base.scss
+++ b/client/src/scss/_base.scss
@@ -13,9 +13,9 @@ body {
   margin: 0;
   background-color: #f4f4f4;
   color: $black;
-  font: 15px/22px 'Inter UI', system-ui, sans-serif;
+  font: 16px/22px 'Inter UI', system-ui, sans-serif;
 
-  font-size: 15px;
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: -0.002em;
 
